# Quibble

./: .editorconfig  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
backend/: .env.example  .flake8  .gitignore  build_files.sh  export_poetry.sh  manage.py  pyproject.toml  requirements.txt  vercel.json
backend/apps/api/: clients.py  http.py  openapi.py  urls.py  utils.py  viewsets.py
backend/apps/api/bases/: serializers.py
backend/apps/api/serializers/comment/: __init__.py  reaction.py
backend/apps/api/serializers/community/: __init__.py  exists.py  topics.py
backend/apps/api/serializers/post/: __init__.py  highlighted.py
backend/apps/api/serializers/user/: __init__.py  auth.py  profile.py
backend/apps/api/v1/: urls.py
backend/apps/api/views/user/: __init__.py  auth.py
backend/apps/api/viewsets/comment/: __init__.py
backend/apps/comment/: admin.py  managers.py  models.py
backend/apps/comment/migrations/: 0001_initial.py  0002_initial.py  0003_alter_comment_commenter_alter_comment_created_at_and_more.py  0003_commentmodel_deleted_alter_commentmodel_quibbler.py  0003_rename_comment_commentmodel_and_more.py  0003_rename_commentmodel_comment_and_more.py  0004_alter_commentmodel_downvotes_and_more.py  0004_comment_post.py
backend/apps/community/: admin.py  filters.py  models.py  topics.json  validators.py
backend/apps/community/migrations/: 0001_initial.py  0002_initial.py  0003_remove_community_rangers_community_moderators_and_more.py  0004_alter_community_avatar_alter_community_banner_and_more.py  0005_community_nsfw_community_topics.py  0005_community_rangers.py  0006_remove_community_is_public_community_type.py  0007_alter_community_type.py  0008_remove_community_topics_topic_community_topics.py  0009_alter_topic_options_alter_topic_icon.py
backend/apps/post/: admin.py  managers.py  models.py
backend/apps/post/migrations/: 0001_initial.py  0002_initial.py  0003_alter_post_comments_alter_post_community_and_more.py  0004_remove_post_is_public_post_type.py  0005_remove_post_comments.py
backend/apps/quib/: admin.py  apps.py  models.py
backend/apps/quib/api/v1/: urls.py  (+2 more)
backend/apps/quib/migrations/: 0001_initial.py  0002_initial.py  0003_remove_quibmodel_comments.py  0003_rename_quibmodel_quib.py  0004_quib_highlighted.py  0004_quibmodel_comments.py  0005_alter_quib_slug.py  0005_alter_quibmodel_content.py
backend/apps/quiblet/: admin.py  apps.py  models.py
backend/apps/quiblet/api/: serializers.py  urls.py  viewsets.py
backend/apps/quiblet/migrations/: 0001_initial.py  0002_alter_quiblet_members.py  0002_initial.py  0003_delete_quib.py  0003_quib_cover.py  0003_quiblet_unique_quiblet_name_case_insensitive.py  0003_remove_quibletmodel_cover_quibletmodel_banner_and_more.py  0003_rename_quiblet_quibletmodel_delete_quib.py  0003_rename_quibletmodel_quiblet.py  0004_quib.py  0004_quibletmodel_color.py  0004_remove_quib_dislikes_remove_quib_likes_quib_comments_and_more.py  0005_alter_quib_quibbler_alter_quib_quiblet.py  0006_quib_is_draft_alter_quib_quiblet.py  0007_remove_quib_is_draft_quib_is_public.py  0008_alter_quib_slug.py  0009_remove_quib_quibbler_quib_quibber.py  0010_alter_quib_is_public.py  0011_alter_quib_id_alter_quiblet_id.py  0012_alter_quib_id_alter_quiblet_id.py  0013_alter_quib_id_alter_quiblet_id.py  0014_alter_quib_id_alter_quiblet_id.py  0015_alter_quib_slug.py  0016_alter_quib_id_alter_quib_slug_alter_quiblet_id.py  0017_alter_quib_id_alter_quiblet_id.py  0018_alter_quib_quibber_alter_quib_quiblet.py  0019_alter_quib_options.py
backend/apps/quiblets/: apps.py  models.py
backend/apps/user/: admin.py  apps.py  auth.py  backends.py  forms.py  managers.py  models.py  signals.py  validators.py
backend/apps/user/api/: serializers.py  urls.py  views.py  viewsets.py
backend/apps/user/migrations/: 0001_initial.py  0002_alter_profile_avatar_alter_profile_created_at_and_more.py  0002_alter_profile_options_alter_user_options.py  0002_alter_profile_username.py  0002_rename_profile_profilemodel.py  0002_rename_profilemodel_profile.py  0003_alter_profile_username.py  0003_profile_banner.py  0004_remove_profile_first_name_remove_profile_last_name_and_more.py
backend/backend/: openapi_description.md
backend/backend/apps/user/: admin.py  auth.py  backends.py  forms.py  managers.py  models.py  serializers.py  urls.py  views.py  viewsets.py
backend/backend/core/: exceptions.py  serializers.py  settings.py  urls.py
backend/common/api/: handlers.py
backend/common/mixins/: model_mixins.py
backend/common/patches/: request.py
backend/config/: settings.py  urls.py
backend/core/: adapters.py  settings.py  urls.py  wsgi.py
backend/django_core/apps/quiblets/: apps.py
backend/django_core/apps/user/: admin.py  apps.py  backends.py  forms.py  managers.py  models.py  serializers.py  urls.py  views.py  viewsets.py
backend/django_core/common/: serializers.py
backend/django_core/common/mixins/: models.py
backend/django_core/core/: settings.py  urls.py
backend/django_core/mixins/models/: created_at.py
backend/django_core/shared/mixins/: models.py
backend/docs/: openapi_description.md
backend/locale/en/LC_MESSAGES/: django.po
backend/mixins/api/: reaction.py
backend/mixins/models/: avatar.py  created_at.py  is_public.py  shortuuid.py  type.py
backend/patches/: request.py
backend/quibble/: asgi.py  exceptions.py  settings.py  wsgi.py
backend/quibble/mixins/models/: avatar.py  color.py  created_at.py  is_public.py  shortuuid_id.py
backend/shared/: permissions.py
backend/shared/mixins/: model_mixins.py
backend/shared/mixins/models/: avatar.py  color.py  shortuuid.py  type.py
backend/shared/validators/: unique_name.py
backend/templates/account/email/: base_message.txt  email_confirmation_message.txt  email_confirmation_subject.txt
backend/tests/: conftest.py
backend/tests/api/: conftest.py
backend/tests/api/user/: test_auth.py  test_auth_endpoints.py  test_me.py  test_profiles.py  test_users.py
backend/tests/api/v1/: test_quiblets.py  test_user_auth.py  test_user_me_profiles.py
(+373 files in other folders)
